--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npm-run-all --parallel dev:frontend dev:backend",
-    "dev:frontend": "cd Frontend",
-    "dev:backend": "cd Backend",
+    "i-dep": "npm install && cd Backend && npm install && cd ../Frontend && npm install",
     "start:frontend": "start cmd /k \"cd Frontend && npm run dev\"",
     "start:backend": "start cmd /k \"cd Backend && npm run dev\"",
     "start": "npm-run-all start:*"
